--- a/srcs/requirements/bonus/website/Dockerfile
+++ b/srcs/requirements/bonus/website/Dockerfile
@@ -6,7 +6,7 @@ COPY ./conf/website.conf /etc/nginx/sites-available/website.conf
 
 COPY ./conf/html/ /var/www/html/
 
-RUN rm -f /etc/nginx/sites-enabled/default \
-    && ln -s /etc/nginx/sites-available/website.conf /etc/nginx/sites-enabled/website.conf
+RUN  ln -s /etc/nginx/sites-available/website.conf /etc/nginx/sites-enabled/website.conf \
+    && rm -f /etc/nginx/sites-enabled/default 
 
 CMD ["nginx", "-g", "daemon off;"]
