--- a/srcs/requirements/bonus/portainer/Dockerfile
+++ b/srcs/requirements/bonus/portainer/Dockerfile
@@ -4,11 +4,10 @@ RUN apt-get update && apt-get install -y wget tar ca-certificates
 
 COPY ./tools/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 
-RUN wget https://github.com/portainer/portainer/releases/download/2.33.3/portainer-2.33.3-linux-amd64.tar.gz \
-    && tar -xzf portainer-2.33.3-linux-amd64.tar.gz -C /usr/local/ \
-    && ln -s /usr/local/portainer/portainer /usr/local/bin/portainer-server \
-    && rm portainer-2.33.3-linux-amd64.tar.gz \
-    && chmod +x /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
+RUN wget https://github.com/portainer/portainer/releases/download/2.33.3/portainer-2.33.3-linux-amd64.tar.gz -O /tmp/portainer.tar.gz \
+    && tar -xzf /tmp/portainer.tar.gz -C /usr/local/ \
+    && rm /tmp/portainer.tar.gz
 
-CMD ["portainer-server", "--bind=:9000", "--data=/data"]
+ENTRYPOINT ["docker-entrypoint.sh"]
